--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.9.0",
     "react-hot-toast": "^2.0.0",
     "react-modal": "^3.14.3",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
